Fix save button not turning invisible

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ background  : #000;
 color       : #FFF;
 }
 
-.invisible{
+#save-button.invisible{
   background: transparent;
   border: none !important;
   font-size:0;
